--- a/docroot/themes/humsci/humsci_basic/src/scss/elements/_base.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/elements/_base.scss
@@ -129,6 +129,13 @@ ul:not([class]) {
   @include hb-unordered-list;
 }
 
+// This prevents the list item to float behind images that are floated to the left
+figure.align-left ~ ul:not([class]):first-of-type {
+  li {
+    overflow: hidden;
+  }
+}
+
 ol:not([class]) {
   @include hb-ordered-list;
 }
