--- a/docroot/themes/humsci/humsci_basic/src/scss/tools/_mixins.general.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/tools/_mixins.general.scss
@@ -124,9 +124,6 @@
     margin-bottom: hb-calculate-rems(10px);
     padding-left: hb-calculate-rems(18px);
 
-    // This prevents the list item to float behind images that are floated to the left
-    overflow: hidden;
-
     &::before {
       content: '';
       display: block;
